fix three bugs: - console cannot select text when private copy - Style squeezing problem of the filter button on small screens in webconsole - Modify the union regexp

--- a/src/web-console/assets/styles/components/tags.css
+++ b/src/web-console/assets/styles/components/tags.css
@@ -12,7 +12,3 @@
 .tags .new-tag-input .el-input__inner {
 	text-align: left;
 }
-
-.tags .new-tag-input .el-input__inner {
-	text-align: left;
-}
